<resources>
    <string name="app_name">스타 보카</string>
    <string name="app_name_eng">Star Voca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu_voca">단어장</string>
    <string name="main_menu_words">내 단어</string>
    <string name="main_menu_learn">학습</string>
    <string name="main_menu_community">커뮤니티</string>
    <string name="main_menu_info">내 정보</string>
    <string name="words_condition_hard">어려워요</string>
    <string name="words_condition_usually">보통이에요</string>
    <string name="words_condition_easy">이해했어요</string>

    <string name="word_add_to_voca">단어장 등록</string>
    <string name="words_sel_question">단어 편집</string>
    <string name="voca_sel_question">단어장 편집</string>

    // 타이틀
    <string name="add_word">단어 추가</string>
    <string name="edit_word">단어 수정</string>
    <string name="edit_voca">단어장 수정</string>

    // 단어
    <string name="WordsAddToVoca">단어장에 등록하기</string>
    <string name="edit">단어 수정하기</string>
    <string name="delete">단어 삭제하기</string>

    // 단어장

    <string name="voca_info_edit">단어장 수정하기</string>
    <string name="voca_delete">단어장 삭제하기</string>
    <string name="voca_share">단어장 공유하기</string>
    <string name="void_voca">단어장을 추가해보세요!</string>
    <string name="void_words">단어를 추가해보세요!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="et_isEmpty">입력되지 않은 칸이 있습니다.</string>
    <string name="email_not_protocol">이메일 형식이 올바르지 않습니다.</string>
    <string name="pw_not_equals">비밀번호가 일치하지 않습니다.</string>
    <string name="pw_not_protocol">비밀번호는 6~18자의 영문자와 1개 이상의 숫자와 문자가 포함되어야합니다.</string>
    <string name="complete_register">회원가입에 성공했습니다! 이메일 인증을 완료해주세요.</string>
    <string name="fail_register">회원가입에 실패했습니다.</string>
    <string name="already_email">이미 사용 중인 이메일입니다.</string>
    <string name="disconnect_sever">서버와의 연결이 끊겼습니다.</string>

    <string name="complete_login">로그인에 성공했습니다.</string>
    <string name="fail_login">로그인에 실패했습니다.</string>
    <string name="fail_login_v_email">이메일 인증을 완료해주세요.</string>
    <string name="tv_forgot_pw">비밀번호 찾기</string>
    <string name="login_email">이메일 로그인 하기</string>
    <string name="login_google">구글 로그인 하기</string>
    <string name="login_katalk">카톡 로그인 하기</string>
    <string name="regis_email">이메일 로그인 가입하기</string>
    <string name="not_login">로그인 없이 계속하기</string>
    <string name="ver">version 1.0.0</string>
    <string name="email">이메일</string>
    <string name="pw">패스워드</string>
    <string name="save_email">이메일 저장</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="change_profile">프로필 사진 변경</string>
    <string name="reset_profile">프로필 사진 초기화</string>
    <string name="nickname">닉네임</string>
    <string name="id">아이디</string>
    <string name="message">상태 메시지</string>
    <string name="words">내 단어</string>
    <string name="changePw">비밀번호 변경</string>
    <string name="nowPW">현재 비밀번호</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="changedPw">변경될 비밀번호</string>
    <string name="changedPw2">변경될 비밀번호 확인</string>
    <string name="checkedPw">비밀번호는 대(소)문자, 특수문자를 포함한 6~18자로 구성되어야합니다.</string>
    <string name="changePW">비밀번호 변경하기</string>
    <string name="voca_name">단어장 이름</string>
    <string name="explanation">설명</string>
    <string name="save">저장</string>
</resources>