<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/monoplex_medium"
        android:gravity="center"
        android:text="@string/app_name_eng"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monoplex_medium"
        android:gravity="center"
        android:text="내가 만드는 단어장"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title2">

        <Button
            android:id="@+id/btn_login_email"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:gravity="center"
            android:maxHeight="60dp"
            android:padding="15dp"
            android:text="@string/login_email"
            android:textColor="@color/white"
            app:drawableLeftCompat="@drawable/ic_baseline_email_24" />

        <Button
            android:id="@+id/btn_login_google"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/gray"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:gravity="center"
            android:maxHeight="60dp"
            android:padding="15dp"
            android:text="@string/login_google"
            android:textColor="@color/white"
            app:drawableLeftCompat="@drawable/ic_baseline_android_24" />

        <TextView
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:id="@+id/tv_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/ridibatang"
            android:gravity="center"
            android:text="@string/regis_email" />

        <TextView
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:id="@+id/tv_no_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ridibatang"
            android:gravity="center"
            android:text="@string/not_login" />

    </LinearLayout>

    <include
        android:id="@+id/include_progress"
        layout="@layout/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>